Fri Aug  9 08:05:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Ignore CORBA throw path

Thu Aug  8 18:54:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Added missing include

Thu Aug  8 17:51:49 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Fix for shared library testing

Thu Aug  8 15:17:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
        * ace/config-android.h:
        * include/makeinclude/platform_android.GNU:
          Improved support for android:
          * Support newer API levels
          * Make it possible to enable shared libraries, something that
            should work with new Android versions, but not tested yet
          * Support new mixed endianess ARM CPU architectures

Wed Aug  7 09:37:08 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/OS/Process/imore.cpp:
          Renamed local variable to not trigger false scoreboard
          error

Wed Aug  7 07:02:52 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * ASNMP/asnmp/address.cpp:
        * ASNMP/asnmp/asn1.cpp:
        * ASNMP/asnmp/snmp.h:
        * ASNMP/asnmp/snmp.cpp:
        * ace/Asynch_IO.h:
        * ace/Connection_Recycling_Strategy.h:
        * ace/Connection_Recycling_Strategy.cpp:
        * ace/ETCL/ETCL_Constraint_Visitor.h:
        * ace/ETCL/ETCL_Constraint_Visitor.cpp:
        * ace/FIFO_Recv_Msg.inl:
        * ace/Log_Msg_Callback.h:
        * ace/Log_Msg_Callback.cpp:
        * ace/Monitor_Control/Auto_Update_Starter.h:
        * ace/Monitor_Control/Auto_Update_Starter.cpp:
        * ace/Monitor_Control/Monitor_Query.h:
        * ace/Monitor_Control/Monitor_Query.cpp:
        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_signal.h:
        * ace/OS_NS_signal.cpp:
        * ace/OS_NS_stdio.cpp: